--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "keyget",
-  "description": "Is nested object modification kit. It can find, get, set, push or call nested properties.",
-  "version": "2.2.0",
+  "description": "Is nested object manipulation kit. It can find, get, set, push or call nested properties.",
+  "version": "2.3.0-rc.2",
   "main": "index.js",
   "scripts": {
-    "cov": "istanbul cover node_modules/mocha/bin/_mocha -- -u exports -R spec test/**.spec.js",
-    "test": "mocha test/**.spec.js"
+    "cov": "nyc npm run test",
+    "cov:report": "nyc report --reporter=lcov --reporter=text",
+    "test": "mocha test/**.spec.js",
+    "lint": "eslint index.js test",
+    "prepublishOnly": "npm run lint && npm run test"
   },
+  "files": [
+    "index.js",
+    "license"
+  ],
   "license": "MIT",
   "devDependencies": {
     "husky": "^1.3.0",
-    "istanbul": "^0.4.4",
-    "mocha": "^5.2.0",
+    "mocha": "^8.2.1",
     "should": "^13.2.3"
   },
   "bin": {
@@ -20,7 +26,6 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rumkin/keyget.git"
@@ -45,5 +50,9 @@
     "hooks": {
       "pre-commit": "npm test"
     }
+  },
+  "dependencies": {
+    "eslint": "^7.14.0",
+    "nyc": "^15.1.0"
   }
 }
